# realizar

./: .cargo-mutants.toml  .clippy.toml  .dockerignore  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmessage  .pmat-baseline.json  .pmat-gates.toml  .pmat-metrics.toml  .pmat.yaml  .pmatignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.gpu  EXTRACTION_CHECKLIST.md  GGUF_EXTRACTION_SUMMARY.md  ISSUES.md  Makefile  README.md  RELEASE_NOTES_v0.2.0.md  build.rs  clippy.toml  defect-report-20251126-113357.json  deny.toml  dhat-heap.json  docker-compose.yml  flake.nix  justfile  metrics.json  mutants.toml  pmat.toml  prometheus.yml  rust-toolchain.toml  (+1 more)
.cargo/: config.toml
.dvc/: config
.github/: CODEOWNERS
.pmat/: baseline.json  coverage-cache.json  dead-code-cache.json  file-health-baseline.json  project.toml
.pmat-metrics/: commit-0b0a842-meta.json  commit-11cfe9e-meta.json  commit-13e5c65-meta.json  commit-3c88d40-meta.json  commit-3cdda0b-meta.json  commit-557eb0b-meta.json  commit-61918d9-meta.json  commit-6393f32-meta.json  commit-63d0a48-meta.json  commit-779ef06-meta.json  commit-831a9ea-meta.json  commit-8709911-meta.json  commit-a928c8e-meta.json  commit-b05b3a5-meta.json  commit-e8ca920-meta.json  commit-e95f956-meta.json  commit-edbfa67-meta.json  commit-fe18b36-meta.json
.pv/: lint-previous.json
benches/: BENCHMARK_CONFIG.md  apr_real.rs  cache.rs  comparative.rs  cuda_batched_inference.rs  cuda_executor.rs  external_matrix.rs  gguf_real.rs  inference.rs  lambda.rs  performance_parity.rs  quantize.rs  server_benchmark_results.json  tensor_ops.rs  tokenizer.rs
benches/comparative/: BENCHMARK_RESULTS.md  README.md  aprender_mnist_results.json  compare_mnist.py  comparison_summary.json  mnist_benchmark.py  pyproject.toml  pytorch_baseline.py  pytorch_mnist_results.json  pytorch_results.json  run_comparison.py  serve_benchmark.py
benches/comparative/results/: benchmark_matrix_20251211_110157.json  benchmark_matrix_20251211_110157.md  llama_cpp_benchmark.json  llama_cpp_cpu_20251211_110157.json  llama_cpp_gpu_20251211_110157.json  ollama_benchmark.json  ollama_gpu_20251211_110157.json
benchmarks/: README.md  llamacpp_results_example.json  realizar_results_example.json
book/: README.md  book.toml
contracts/: apr-load-parity-v1.yaml  batch-inference-v1.yaml  cuda-graph-safety-v1.yaml  dispatch-v1.yaml  forward-pass-v1.yaml  gemm-v1.yaml  kernel-dispatch-v1.yaml  kv-cache-management-v1.yaml  kv-cache-v1.yaml  matmul-v1.yaml  quantization-v1.yaml  safetensors-gpu-parity-v1.yaml  sampling-v1.yaml  streaming-safety-v1.yaml  tensor-name-resolution-v1.yaml  tokenizer-v1.yaml  tool-parity-v1.yaml
docs/: BENCHMARK_SAMPLE_SIZES.md  CONFIDENCE_INTERVALS.md  DESIGN.md  ML_REPRODUCIBILITY.md  RANDOM_SEEDS.md  STATISTICAL_METHODOLOGY.md  benchmarking-other-servers.md  design-by-contract.md  model-loading.md
examples/: README.md  api_server.rs  apr_benchmark.rs  apr_gpu_benchmark.rs  apr_loading.rs  apr_mmap_loading.rs  attention_manual_verify.rs  bench_apr_gpu.rs  bench_apr_vs_gguf.rs  bench_barrier_overhead.rs  bench_batched_forward.rs  bench_batched_gemv.rs  bench_breakdown.rs  bench_chunk_sizes.rs  bench_chunked_matmul.rs  bench_comparison.rs  bench_continuous_batching.rs  bench_cpu_util.rs  bench_f32_vs_q8k.rs  bench_flash_decoding.rs  bench_forward.rs  bench_full_sb.rs  bench_gemv.rs  bench_kernel_variants.rs  bench_manual_threads.rs  bench_matmul_breakdown.rs  bench_matmul_only.rs  bench_multisequence_graph.rs  bench_q4k_auto.rs  bench_q4k_detect.rs  bench_q4k_parallel.rs  bench_q4k_simd.rs  bench_q8_activations.rs  bench_q8k_kernel.rs  bench_q8k_speedup.rs  bench_qwen.rs  bench_rayon_overhead.rs  bench_realistic.rs  bench_scaling.rs  bench_scratch.rs  (+414 more)
models/: mnist_784x2.apr
playbooks/: chat_template.yaml  maintain_coverage.sh
scripts/: add-chapter-placeholders.sh  bench-compare.sh  bench-cpu-matrix.sh  bench-gguf-gpu-matrix.sh  bench-matrix.sh  bench-server-matrix.sh  bench-update-readme.sh  compare_benchmarks.py  load_test.sh  perf-gate.sh  pmat_split.py  run_load_tests.md  sync-models.playbook.yaml  sync-models.sh  sync-models_test.sh  validate-book-code.sh
src/: agent.rs  always_reject_model.rs  api.rs  apply.rs  apr.rs  apr_transformer.rs  arch_requirements.rs  arch_requirements_fallback.rs  audit.rs  audit_record.rs  audit_write_batch.rs  bench.rs  bench_preflight.rs  bench_preflight_model_check.rs  bench_preflight_part_02.rs  bench_preflight_part_03.rs  bench_preflight_part_03_part_02.rs  bench_viz.rs  bench_viz_benchmark_grid.rs  bench_viz_part_02.rs  bench_viz_part_02_part_02.rs  bench_viz_render_profiling_benchmark.rs  bench_viz_runner.rs  bench_viz_tests_part_02.rs  benchmark_result.rs  brick.rs  cache.rs  cache_part_02.rs  capability.rs  chat_template.rs  chat_template_alpaca_format.rs  chat_template_contract_tests.rs  chat_template_helpers.rs  chat_template_llama2.rs  chat_template_message.rs  chat_template_part_04.rs  chat_template_part_06.rs  chat_template_prop_format.rs  chat_template_qwen3_nothink.rs  chat_template_special_tokens.rs  (+107 more)
target_disk/: .rustc_info.json
tests/: activation_parity.rs  api_coverage.rs  api_deep_coverage.rs  api_fault_injection.rs  api_integration.rs  apr_coverage.rs  apr_format_boundaries.rs  apr_fuzz_corpus.rs  apr_q4_kernel_trace.rs  apr_q4_parity.rs  apr_transformer_coverage.rs  apr_transformer_deep_coverage.rs  batch_mock_logic.rs  benchmark_parity_safetensors.rs  cli_coverage.rs  cli_deep_coverage.rs  contract_traits.rs  convert_coverage.rs  convert_deep_coverage.rs  convert_extended_coverage.rs  coverage_assault_01.rs  cuda_combinatorial_coverage.rs  cuda_coverage.rs  cuda_deep_coverage.rs  cuda_edge_cases.rs  cuda_heavy_integration.rs  cuda_heavy_integration_gguf.rs  cuda_live_layer_tests.rs  cuda_proptest_batched.rs  cuda_ptx_coverage.rs  cuda_synthetic_coverage.rs  cuda_synthetic_graph.rs  debug_q4_ptx.rs  driver_cpu.rs  driver_cuda_gguf.rs  e2e_batch_inference.rs  e2e_modality_parity.rs  falsification_tests.rs  ffn_coverage.rs  (+112 more)
(+2516 files in other folders)
