[project]
name = "realizar-benchmarks"
version = "0.1.0"
description = "Comparative benchmarks for Realizar vs PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "psutil>=5.9",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16"]

[tool.uv]
dev-dependencies = []
